--- a/.gitignore
+++ b/.gitignore
@@ -3,36 +3,8 @@ node_modules/
 
 # Build output
 dist/
+dist-ssr/
 .vite/
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Environment files
-.env
-.env.*
-!.env.example
-
-# Editor and OS
-.DS_Store
-.vscode/*
-!.vscode/extensions.json
-!.vscode/settings.json
-*.swp
-*.swo
-
-# Coverage / test
-coverage/
-.nyc_output/
-
-# Misc
-.eslintcache
-.parcel-cache
-.turbo/
-.cache/
 
 # Logs
 logs
@@ -43,21 +15,32 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Environment files
+.env
+.env.*
+!.env.example
 *.local
 
-# Editor directories and files
+# Coverage / test
+coverage/
+.nyc_output/
+
+# Editor and OS
+.DS_Store
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
-.DS_Store
+*.swp
+*.swo
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-.editorconfig
-.gitattributes
-package-lock.json
+
+# Misc
+.eslintcache
+.parcel-cache
+.turbo/
+.cache/
